# plateforme-fiabilite-donnees-ia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
docs/architecture/: modele-commun.md
docs/contracts/: contrat-fonctionnel-minimal.md  lineage-dbt-mobility.md  mapping-mobility.md  regles-qualite-incidents.md
docs/sprints/: sprint-00.md  sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_active_incident_deduplication.py
src/pfpd_ia/: __init__.py  config.py  database.py  main.py  models.py
src/pfpd_ia/connectors/: __init__.py
src/pfpd_ia/connectors/mobility/: __init__.py  cli.py  collector.py  config.py  lineage.py  lineage_cli.py  sanitizer.py
src/pfpd_ia/dashboard/: __init__.py  app.py  queries.py
src/pfpd_ia/incidents/: __init__.py  service.py
src/pfpd_ia/quality/: __init__.py  rules.py
tests/: conftest.py
tests/integration/: test_dashboard.py  test_database_contract.py  test_incident_lifecycle.py  test_mobility_collector.py  test_mobility_lineage.py
tests/unit/: test_config.py  test_dashboard_queries.py  test_health.py  test_mobility_manifest.py  test_mobility_sanitizer.py  test_models.py  test_quality_rules.py
