[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pfpd-ia"
version = "0.1.0"
description = "Socle d'observabilite multi-pipelines pour la fiabilite des donnees"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.2",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "SQLAlchemy==2.0.51",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.7.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -p no:cacheprovider"
markers = [
  "integration: requires a running PostgreSQL database",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
